Wed Oct  5 03:24:55 2016  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* enum.c: Make Enumerable#chunk with no block return
	  an Enumerator [#2172]

Wed Oct  5 01:19:45 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* internal.h (ST2FIX): new macro to convert st_index_t to Fixnum.
	  a hash value of Object might be Bignum, but it causes many troubles
	  expecially the Object is used as a key of a hash.  so I've gave up
	  to do so.

	* array.c (rb_ary_hash): use above macro.

	* bignum.c (rb_big_hash): ditto.

	* hash.c (rb_obj_hash, rb_hash_hash): ditto.

	* numeric.c (rb_dbl_hash): ditto.

	* proc.c (proc_hash): ditto.

	* re.c (rb_reg_hash, match_hash): ditto.

	* string.c (rb_str_hash_m): ditto.

Tue Oct  4 12:59:44 2016  Koichi ITO  <koic.ito@gmail.com>

	* array.c (rb_ary_dig): [DOC] update an example of error message
	  by Array#dig, because of Integer Unification.  [Fix GH-1455]

Tue Oct  4 09:55:12 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_div2): need more room
	  for precision to round.  [ruby-core:77475] [Bug #12805]

Tue Oct  4 06:05:46 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* regcomp.c (onig_print_compiled_byte_code): make the shown address
	  look relative.

Tue Oct  4 05:53:11 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* regexec.c (OPCODE_EXEC_HOOK): op is p-1 because p is already
	  incremented.

	* regexec.c (OPCODE_EXEC_HOOK): use the exact end address.

	* regexec.c (match_at): don't call OPCODE_EXEC_HOOK in CASE()
	  when it comes from goto fail.

Mon Oct  3 21:24:41 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: mention Readline.quoting_detection_proc{,=}.

Mon Oct  3 21:19:46 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/logger.rb: [DOC] Fix default value of shift_age.

Mon Oct  3 17:20:05 2016  George Brocklehurst  <ruby@georgebrock.com>

	* ext/readline/readline.c (readline_s_set_quoting_detection_proc):
	  support rl_char_is_quoted_p.  [Feature #12659]
